--- a/docker/.env
+++ b/docker/.env
@@ -8,3 +8,7 @@ RUST_LOG=info
 HOST=0.0.0.0:7878
 ADEMPIERE_BACKEND_ENDPOINT=http://0.0.0.0:7878/v1/entities
 ADEMPIERE_AUTHORIZATION="Bearer"
+KAFKA_QUEUES="ad_menu"
+KAFKA_HOST=0.0.0.0:9092
+KAFKA_GROUP=default
+OPENSEARCH_URL="http://localhost:9200"
