--- a/docker/.env
+++ b/docker/.env
@@ -1,14 +1,7 @@
-DB_HOST=db_host
-DB_PORT=db_port
-DB_NAME=db_name
-DB_USER=db_user
-DB_PASSWORD=db_password
-DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}
 RUST_LOG=info
 HOST=0.0.0.0:7878
-ADEMPIERE_BACKEND_ENDPOINT=http://0.0.0.0:7878/v1/entities
-ADEMPIERE_AUTHORIZATION="Bearer"
-KAFKA_QUEUES="amenu"
-KAFKA_HOST=0.0.0.0:9092
-KAFKA_GROUP=default
-OPENSEARCH_URL="http://localhost:9200"
+KAFKA_ENABLED="kafka_enabled"
+KAFKA_QUEUES="kafka_queues"
+KAFKA_HOST="kafka_host"
+KAFKA_GROUP="kafka_group"
+OPENSEARCH_URL="opensearch_url"
