--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ RUST_LOG=info
 HOST=0.0.0.0:7878
 KAFKA_ENABLED="N"
 KAFKA_QUEUES="menu"
-KAFKA_HOST=0.0.0.0:29092
-KAFKA_GROUP=default
+KAFKA_HOST="0.0.0.0:29092"
+KAFKA_GROUP="default"
 OPENSEARCH_URL="http://localhost:9200"
