--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,9 +7,9 @@ WORKDIR /opt/apps/server
 
 COPY . . /opt/apps/server/
 
-RUN apt-get update && apt-get install -y pkg-config libssl-dev && rm -rf /var/lib/apt/lists/* && \
-    cargo install --path . && \
-    mv docker/.env /usr/local/cargo/bin/
+RUN apt-get update && apt-get install -y pkg-config libssl-dev && rm -rf /var/lib/apt/lists/*
+RUN cargo install --path .
+RUN mv docker/.env /usr/local/cargo/bin/
 
 FROM debian:bullseye
 
