--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,8 +59,7 @@ jobs:
         with:
           context: .
           file: docker/Dockerfile
-          #platforms: linux/amd64,linux/amd64/v2,linux/arm64/v8
-          platforms: linux/arm64/v8
+          platforms: linux/amd64,linux/amd64/v2,linux/arm64/v8
           push: true
           tags: |
             ${{ secrets.DOCKER_HUB_REPO_NAME }}:${{ github.event.release.tag_name }}
