add support to: - window - Process - Smart Browser - Menu

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 RUST_LOG=info
 HOST=0.0.0.0:7878
 KAFKA_ENABLED="N"
-KAFKA_QUEUES="menu process"
+KAFKA_QUEUES="menu process browser window"
 KAFKA_HOST="0.0.0.0:29092"
 KAFKA_GROUP="default"
 OPENSEARCH_URL="http://localhost:9200"
