--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 RUST_LOG=info
 HOST=0.0.0.0:7878
-KAFKA_ENABLED="N"
+ALLOWED_ORIGIN="*"
+KAFKA_ENABLED="Y"
 KAFKA_QUEUES="menu process browser window"
 KAFKA_HOST="0.0.0.0:29092"
 KAFKA_GROUP="default"
