--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 [dependencies]
 dotenv = "0.15.0"
 serde = "1.0.137"
-salvo = "0.43.0"
+salvo = { version = "0.43.0", features=["cors"] }
 tokio = { version = "1", features = ["macros"] }
 serde_json = "1.0.91"
 log = "0.4.17"
