--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -46,8 +46,8 @@ services:
       nofile:
         soft: 65536 # maximum number of open files for the OpenSearch user, set to at least 65536 on modern systems
         hard: 65536
-    # volumes:
-    #   - volume_opensearch:/usr/share/opensearch/data
+    volumes:
+      - volume_opensearch:/usr/share/opensearch/data
     ports:
       - ${OPENSEARCH_PORT}:9200
       - ${OPENSEARCH_PERFORMANCE_PORT}:9600 # required for Performance Analyzer
