update image version

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -19,7 +19,7 @@ ZOOKEEPER_HOST="default-stack.zookeeper"
 ZOOKEEPER_PORT="2181"
 
 OPENSEARCH_GATEWAY_RS_HOST="default-stack.opensearch.gateway.rs"
-OPENSEARCH_GATEWAY_RS_IMAGE="openls/opensearch-gateway-rs:latest"
+OPENSEARCH_GATEWAY_RS_IMAGE="openls/opensearch-gateway-rs:1.0.9"
 OPENSEARCH_GATEWAY_RS_PORT="7878"
 
 # Networks
