--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,16 @@ publish = false
 
 [dependencies]
 dotenv = "0.15.0"
-serde = "1.0.137"
-salvo = { version = "0.63.1", features=["cors"] }
-tokio = { version = "1", features = ["macros"] }
-serde_json = "1.0.91"
-log = "0.4.17"
-simple_logger = "4.1.0"
-futures = "0.3.26"
-rdkafka = "0.36.0"
-opensearch = "2.1.0"
+serde = "1.0.197"
+async-trait = "0.1.58"
+salvo = { version = "0.66.0", features=["cors"] }
+tokio = { version = "1.36.0", features = ["macros"] }
+serde_json = "1.0.114"
+log = "0.4.20"
+simple_logger = "4.3.3"
+futures = "0.3.30"
+rdkafka = "0.36.2"
+opensearch = "2.2.0"
 
 [[bin]]
 name = "server"
