--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,5 @@
 RUST_LOG=info
-HOST=0.0.0.0:7878
+PORT=7878
 ALLOWED_ORIGIN="allowed_origin"
 KAFKA_ENABLED="kafka_enabled"
 KAFKA_QUEUES="kafka_queues"
