--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM rust:1.76.0-bullseye as builder
+FROM rust:1.77.1-bullseye as builder
 
-LABEL maintainer="ysenih@erpya.com" \
+LABEL maintainer="ysenih@erpya.com; EdwinBetanc0urt@outlook.com;" \
 	description="A Image for start service from rust binary"
 
 WORKDIR /opt/apps/server
@@ -15,6 +15,7 @@ FROM debian:bullseye
 
 ENV \
     RUST_LOG="info" \
+	PORT="7878" \
     KAFKA_ENABLED="Y" \
     KAFKA_QUEUES="menu process browser window" \
     ALLOWED_ORIGIN="*" \
@@ -33,6 +34,7 @@ RUN apt-get update && \
     apt-get install -y pkg-config openssl libssl-dev tzdata && \
     rm -rf /var/lib/apt/lists/* && \
     sed -i "s|info|$RUST_LOG|g" /opt/apps/server/.env && \
+	sed -i "s|7878|$PORT|g" /opt/apps/server/.env && \
     sed -i "s|allowed_origin|$ALLOWED_ORIGIN|g" /opt/apps/server/.env && \
     sed -i "s|kafka_enabled|$KAFKA_ENABLED|g" /opt/apps/server/.env && \
     sed -i "s|kafka_queues|$KAFKA_QUEUES|g" /opt/apps/server/.env && \
