--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -18,9 +18,9 @@ ZOOKEEPER_IMAGE="confluentinc/cp-zookeeper:latest"
 ZOOKEEPER_HOST="default-stack.zookeeper"
 ZOOKEEPER_PORT="2181"
 
-OPENSEARCH_GATEWAY_RS_HOST="default-stack.opensearch.gateway.rs"
-OPENSEARCH_GATEWAY_RS_IMAGE="openls/opensearch-gateway-rs:1.0.9"
-OPENSEARCH_GATEWAY_RS_PORT="7878"
+DICTIONARY_RS_HOST="default-stack.opensearch.gateway.rs"
+DICTIONARY_RS_IMAGE="openls/dictionary-rs:1.0.9"
+DICTIONARY_RS_PORT=7878
 
 # Networks
 DEFAULT_NETWORK="default-stack.adempiere_network"
