feat: Add `Form` to get and create definition.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ RUST_LOG=info
 PORT=7878
 ALLOWED_ORIGIN="*"
 KAFKA_ENABLED="Y"
-KAFKA_QUEUES="menu process browser window"
+KAFKA_QUEUES="menu browser form process window"
 KAFKA_HOST="0.0.0.0:29092"
 KAFKA_GROUP="default"
 OPENSEARCH_URL="http://localhost:9200"
