--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ KAFKA_QUEUES="menu browser form process window"
 KAFKA_HOST="0.0.0.0:29092"
 KAFKA_GROUP="default"
 OPENSEARCH_URL="http://localhost:9200"
+VERSION="1.0.0-dev"
