--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,10 +43,13 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -59,8 +62,11 @@ jobs:
         with:
           context: .
           file: docker/Dockerfile
-          platforms: linux/amd64,linux/amd64/v2,linux/arm64/v8
+          # platforms: linux/amd64,linux/amd64/v2,linux/arm64/v8
+          platforms: linux/amd64,linux/amd64/v2
           push: true
+          build-args: |
+            BUILD_VERSION=${{ github.event.release.tag_name }}
           tags: |
             ${{ secrets.DOCKER_HUB_REPO_NAME }}:${{ github.event.release.tag_name }}
             ${{ secrets.DOCKER_HUB_REPO_NAME }}
