--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,9 @@
 FROM rust:1.78.0-bullseye as builder
 
 LABEL maintainer="ysenih@erpya.com; EdwinBetanc0urt@outlook.com;" \
-	description="A Image for start service from rust binary"
+	description="Microservice with OpenSearch for ADempiere Dictionary using Rust"
+
+ARG BUILD_VERSION="1.0.0"
 
 WORKDIR /opt/apps/server
 
@@ -11,7 +13,7 @@ RUN apt-get update && apt-get install -y pkg-config libssl-dev && rm -rf /var/li
     cargo install --config net.git-fetch-with-cli=true --path . && \
     mv docker/.env /usr/local/cargo/bin/
 
-FROM debian:bullseye-20240423
+FROM debian:bullseye-20240513
 
 ENV \
     RUST_LOG="info" \
@@ -22,7 +24,8 @@ ENV \
     KAFKA_HOST="0.0.0.0:9092" \
     KAFKA_GROUP="default" \
     OPENSEARCH_URL="http://localhost:9200" \
-    TZ="America/Caracas"
+	TZ="America/Caracas" \
+	VERSION=${BUILD_VERSION}
 
 COPY --from=builder /usr/local/cargo/bin/server /usr/local/bin/server
 
@@ -41,6 +44,7 @@ RUN apt-get update && \
     sed -i "s|kafka_host|$KAFKA_HOST|g" /opt/apps/server/.env && \
     sed -i "s|kafka_group|$KAFKA_GROUP|g" /opt/apps/server/.env && \
     sed -i "s|opensearch_url|$OPENSEARCH_URL|g" /opt/apps/server/.env && \
+	sed -i "s|1.0.0-dev|$VERSION|g" /opt/apps/server/.env && \
     echo "Set Timezone..." && \
 	echo $TZ > /etc/timezone
 
