add version env on docker.

--- a/docker/.env
+++ b/docker/.env
@@ -6,3 +6,4 @@ KAFKA_QUEUES="kafka_queues"
 KAFKA_HOST="kafka_host"
 KAFKA_GROUP="kafka_group"
 OPENSEARCH_URL="opensearch_url"
+VERSION="1.0.0-dev"
