Add tree support

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ RUST_LOG=info
 PORT=7878
 ALLOWED_ORIGIN="*"
 KAFKA_ENABLED="Y"
-KAFKA_QUEUES="menu browser form process window"
-KAFKA_HOST="0.0.0.0:29092"
+KAFKA_QUEUES="menu browser form process window menu_item menu_tree"
+KAFKA_HOST="localhost:29092"
 KAFKA_GROUP="default"
 OPENSEARCH_URL="http://localhost:9200"
 VERSION="1.0.0-dev"
