--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -6,18 +6,18 @@ GENERIC_RESTART="on-failure"
 
 # OpenSearch https://opensearch.org/
 OPENSEARCH_IMAGE="opensearchproject/opensearch:2.13.0"
-OPENSEARCH_HOST="default-stack.opensearch-service"
-OPENSEARCH_VOLUME="default-stack.volume_opensearch"
+OPENSEARCH_HOST="${COMPOSE_PROJECT_NAME}.opensearch-service"
+OPENSEARCH_VOLUME="${COMPOSE_PROJECT_NAME}.volume_opensearch"
 OPENSEARCH_PORT="9200"
 OPENSEARCH_PERFORMANCE_PORT="9600"
 
 # OpenSearch restore db
-OPENSEARCH_SETUP_HOST="default-stack.opensearch-setup"
+OPENSEARCH_SETUP_HOST="${COMPOSE_PROJECT_NAME}.opensearch-setup"
 OPENSEARCH_SETUP_NODE_HOSTNAME="http://${OPENSEARCH_HOST}:${OPENSEARCH_PORT}"
 
 # OpenSearch Dashboards UI
 OPENSEARCH_DASHBOARDS_IMAGE="opensearchproject/opensearch-dashboards:2.13.0"
-OPENSEARCH_DASHBOARDS_HOST="default-stack.opensearch-dashboards"
+OPENSEARCH_DASHBOARDS_HOST="${COMPOSE_PROJECT_NAME}.opensearch-dashboards"
 OPENSEARCH_DASHBOARDS_PORT=5601 # Do not change, not parameterizable
 OPENSEARCH_DASHBOARDS_EXTERNAL_PORT=5601
 OPENSEARCH_DASHBOARDS_OPENSEARCH_HOSTS="[\"http://${OPENSEARCH_HOST}:${OPENSEARCH_PORT}\"]"
@@ -25,34 +25,31 @@ OPENSEARCH_DASHBOARDS_OPENSEARCH_HOSTS="[\"http://${OPENSEARCH_HOST}:${OPENSEARC
 
 # Zookeeper to manage kafka brokers
 ZOOKEEPER_IMAGE="confluentinc/cp-zookeeper:7.6.1"
-ZOOKEEPER_HOST="default-stack.zookeeper"
+ZOOKEEPER_HOST="${COMPOSE_PROJECT_NAME}.zookeeper"
 ZOOKEEPER_PORT=2181
 ZOOKEEPER_TICK_TIME=2000
 
 # Kafka https://www.confluent.io/home/
 KAFKA_IMAGE="confluentinc/cp-kafka:latest"
-KAFKA_HOST="default-stack.kafka"
-KAFKA_PORT=9092
-KAFKA_EXTERNAL_PORT=9092
-KAFKA_BROKERCONNECT="kafka:${KAFKA_PORT}"
-KAFKA_BROKER_PORT=29092
-KAFKA_BROKER_EXTERNAL_PORT=29092
-KAFKA_EXTERNAL_BROKERCONNECT="${KAFKA_HOST}:${KAFKA_BROKER_EXTERNAL_PORT}"
+KAFKA_HOST="${COMPOSE_PROJECT_NAME}.kafka"
+KAFKA_EXTERNAL_PORT=29092
+KAFKA_INTERNAL_HOST="kafka:9092"
+KAFKA_BROKER_HOST="localhost:${KAFKA_EXTERNAL_PORT}"
 
 # Kafdrop Kafka Cluster Overview
 KAFDROP_IMAGE="obsidiandynamics/kafdrop:4.0.1"
-KAFDROP_HOST="default-stack.kafdrop"
+KAFDROP_HOST="${COMPOSE_PROJECT_NAME}.kafdrop"
 KAFDROP_PORT=9000
 KAFDROP_EXTERNAL_PORT=19000
 KAFDROP_KAFKA_HOST="${KAFKA_BROKERCONNECT}"
 
 
 # Dictionary gateway with OpenSearch
-DICTIONARY_RS_HOST="default-stack.dictionary-rs"
+DICTIONARY_RS_HOST="${COMPOSE_PROJECT_NAME}.dictionary-rs"
 DICTIONARY_RS_IMAGE="openls/dictionary-rs:1.2.0"
 DICTIONARY_RS_PORT=7878
 
 
 
 # Networks
-DEFAULT_NETWORK="default-stack.adempiere_network"
+DEFAULT_NETWORK="${COMPOSE_PROJECT_NAME}.adempiere_network"
