Add support to: - menu_item - role - menu_tree

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ RUST_LOG=info
 PORT=7878
 ALLOWED_ORIGIN="*"
 KAFKA_ENABLED="Y"
-KAFKA_QUEUES="menu browser form process window menu_item menu_tree"
+KAFKA_QUEUES="menu browser form process window menu_item menu_tree role"
 KAFKA_HOST="localhost:29092"
 KAFKA_GROUP="default"
 OPENSEARCH_URL="http://localhost:9200"
